--- a/public/support-dashboard.html
+++ b/public/support-dashboard.html
@@ -830,6 +830,10 @@
                     <a class="nav-item active" data-section="resolution">
                         <i class="bi bi-search"></i> <span>Customer Lookup</span>
                     </a>
+                    <a class="nav-item" data-section="tickets">
+                        <i class="bi bi-ticket-perforated"></i> <span>Tickets</span>
+                        <span class="nav-badge" id="ticketQueueBadge" style="display: none;">0</span>
+                    </a>
                     <a class="nav-item" data-section="reviews">
                         <i class="bi bi-star-half"></i> <span>Reviews</span>
                         <span class="nav-badge" id="reviewBadge" style="display: none;">0</span>
@@ -1202,6 +1206,66 @@
                                         📊 Resolution Log
                                     </div>
                                     <div id="resolutionLog"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+
+                <!-- Tickets Queue Section (Professional) -->
+                <section class="section" id="sectionTickets">
+                    <div style="padding: 20px;">
+                        <div
+                            style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px;">
+                            <h1
+                                style="font-size: 20px; font-weight: 800; display: flex; align-items: center; gap: 10px;">
+                                <i class="bi bi-ticket-perforated" style="color: var(--primary);"></i> Tickets Queue
+                            </h1>
+                            <div style="display: flex; gap: 8px;">
+                                <select id="ticketQueueStatus" onchange="loadTicketsQueue()"
+                                    style="padding: 8px 12px; border: 1px solid var(--border); border-radius: 8px; font-size: 12px; background: var(--bg-secondary);">
+                                    <option value="open,in_progress">Open & In Progress</option>
+                                    <option value="open">Open Only</option>
+                                    <option value="in_progress">In Progress</option>
+                                    <option value="resolved">Resolved</option>
+                                    <option value="closed">Closed</option>
+                                </select>
+                                <select id="ticketQueuePriority" onchange="loadTicketsQueue()"
+                                    style="padding: 8px 12px; border: 1px solid var(--border); border-radius: 8px; font-size: 12px; background: var(--bg-secondary);">
+                                    <option value="">All Priorities</option>
+                                    <option value="urgent">🔴 Urgent</option>
+                                    <option value="high">🟠 High</option>
+                                    <option value="normal">🟢 Normal</option>
+                                    <option value="low">⚪ Low</option>
+                                </select>
+                                <button onclick="loadTicketsQueue()"
+                                    style="padding: 8px 16px; background: var(--primary); color: white; border: none; border-radius: 8px; font-weight: 600; cursor: pointer;">
+                                    <i class="bi bi-arrow-clockwise"></i> Refresh
+                                </button>
+                            </div>
+                        </div>
+
+                        <!-- SLA Legend -->
+                        <div
+                            style="display: flex; gap: 16px; margin-bottom: 16px; font-size: 11px; color: var(--text-muted);">
+                            <span><span
+                                    style="display: inline-block; width: 10px; height: 10px; background: #10b981; border-radius: 50%; margin-right: 4px;"></span>
+                                &lt; 2h</span>
+                            <span><span
+                                    style="display: inline-block; width: 10px; height: 10px; background: #f59e0b; border-radius: 50%; margin-right: 4px;"></span>
+                                2-4h</span>
+                            <span><span
+                                    style="display: inline-block; width: 10px; height: 10px; background: #ef4444; border-radius: 50%; margin-right: 4px;"></span>
+                                &gt; 4h (SLA Breach)</span>
+                        </div>
+
+                        <div class="premium-card">
+                            <div class="premium-card-body" style="padding: 0;">
+                                <div id="ticketsQueueList" style="min-height: 300px;">
+                                    <div class="empty-state-center">
+                                        <i class="bi bi-inbox"></i>
+                                        <p>Loading tickets...</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
