fix: add JS cache-busting version for support dashboard

--- a/public/support-dashboard.html
+++ b/public/support-dashboard.html
@@ -1131,13 +1131,9 @@
                                         💰 Refund Actions
                                     </div>
                                     <div class="actions-grid">
-                                        <div class="action-btn-premium" onclick="quickAction('full_refund')">
+                                        <div class="action-btn-premium" onclick="quickAction('request_refund')">
                                             <i class="bi bi-arrow-counterclockwise"></i>
-                                            <span>Full Refund</span>
-                                        </div>
-                                        <div class="action-btn-premium" onclick="quickAction('partial_refund')">
-                                            <i class="bi bi-percent"></i>
-                                            <span>Partial Refund</span>
+                                            <span>Request Refund</span>
                                         </div>
                                         <div class="action-btn-premium" onclick="quickAction('goodwill_credit')">
                                             <i class="bi bi-gift"></i>
@@ -1318,7 +1314,7 @@
     <script src="js/shared/utils.js"></script>
     <script src="js/shared/toast.js"></script>
     <script src="js/shared/modal.js"></script>
-    <script src="js/support-dashboard.js"></script>
+    <script src="js/support-dashboard.js?v=20260131"></script>
 </body>
 
 </html>
