feat: simplify Quick Actions - remove ops tasks, keep core support actions

--- a/public/support-dashboard.html
+++ b/public/support-dashboard.html
@@ -1125,43 +1125,19 @@
                                 </div>
 
                                 <div id="actionsPanel" style="display: none;">
-                                    <!-- Refund Actions -->
+                                    <!-- Quick Actions - Simplified per Senior Support Expert Review -->
                                     <div
                                         style="font-size: 12px; font-weight: 700; color: var(--text-secondary); margin-bottom: 12px; text-transform: uppercase;">
-                                        💰 Refund Actions
+                                        💼 Quick Actions
                                     </div>
                                     <div class="actions-grid">
                                         <div class="action-btn-premium" onclick="quickAction('request_refund')">
                                             <i class="bi bi-arrow-counterclockwise"></i>
                                             <span>Request Refund</span>
                                         </div>
-                                        <div class="action-btn-premium" onclick="quickAction('goodwill_credit')">
-                                            <i class="bi bi-gift"></i>
-                                            <span>Goodwill Credit</span>
-                                        </div>
-                                    </div>
-
-                                    <!-- Order Actions -->
-                                    <div
-                                        style="font-size: 12px; font-weight: 700; color: var(--text-secondary); margin: 20px 0 12px; text-transform: uppercase;">
-                                        📦 Order Actions
-                                    </div>
-                                    <div class="actions-grid">
                                         <div class="action-btn-premium" onclick="showCancellationPreview(currentOrder)">
                                             <i class="bi bi-x-circle"></i>
                                             <span>Cancel Order</span>
-                                        </div>
-                                        <div class="action-btn-premium" onclick="showReturnRequest(currentOrder)">
-                                            <i class="bi bi-arrow-return-left"></i>
-                                            <span>7-Day Return</span>
-                                        </div>
-                                        <div class="action-btn-premium" onclick="quickAction('reassign_driver')">
-                                            <i class="bi bi-arrow-repeat"></i>
-                                            <span>Reassign Driver</span>
-                                        </div>
-                                        <div class="action-btn-premium" onclick="quickAction('rush_delivery')">
-                                            <i class="bi bi-lightning"></i>
-                                            <span>Rush Delivery</span>
                                         </div>
                                     </div>
 
@@ -1314,7 +1290,7 @@
     <script src="js/shared/utils.js"></script>
     <script src="js/shared/toast.js"></script>
     <script src="js/shared/modal.js"></script>
-    <script src="js/support-dashboard.js?v=20260131"></script>
+    <script src="js/support-dashboard.js?v=20260131b"></script>
 </body>
 
 </html>
