--- a/public/privacy.html
+++ b/public/privacy.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy - QScrap</title>
+    <title>Privacy Policy - QScrap | سياسة الخصوصية</title>
     <style>
         * {
             margin: 0;
@@ -21,7 +21,7 @@
         }
 
         .container {
-            max-width: 800px;
+            max-width: 900px;
             margin: 0 auto;
         }
 
@@ -35,6 +35,12 @@
             color: #22c55e;
             margin: 30px 0 15px;
             font-size: 1.4em;
+        }
+
+        h3 {
+            color: #4ade80;
+            margin: 20px 0 10px;
+            font-size: 1.1em;
         }
 
         p {
@@ -67,75 +73,248 @@
         a {
             color: #22c55e;
         }
+
+        .highlight-box {
+            background: #1a2e1a;
+            border-left: 4px solid #22c55e;
+            padding: 15px;
+            margin: 15px 0;
+        }
+
+        .arabic {
+            direction: rtl;
+            text-align: right;
+            font-family: 'Noto Sans Arabic', Arial, sans-serif;
+        }
+
+        .company-info {
+            background: #1a1a1a;
+            border: 1px solid #333;
+            padding: 20px;
+            margin-top: 30px;
+        }
     </style>
 </head>
 
 <body>
     <div class="container">
-        <span class="logo">🔧 QScrap</span>
+        <span class="logo">🔧 QScrap | كيو سكراب</span>
         <h1>Privacy Policy</h1>
-        <p class="date">Last updated: December 26, 2024</p>
+        <p class="arabic" style="color:#22c55e; margin-bottom:20px;">سياسة الخصوصية</p>
+        <p class="date">Last updated: January 31, 2026 | آخر تحديث: 31 يناير 2026</p>
+        <p class="date">Effective Date: January 31, 2026 | تاريخ السريان: 31 يناير 2026</p>
 
-        <h2>1. Introduction</h2>
-        <p>QScrap Services & Trading L.L.C / كيوسكراب للخدمات والتجارة ذ.م.م ("we", "our", or "us") operates the QScrap
-            mobile
-            application. This Privacy Policy
-            explains how we
-            collect, use, disclose, and safeguard your information when you use our app.</p>
+        <div class="highlight-box">
+            <p><strong>Your privacy is important to us.</strong> This Privacy Policy explains how QScrap Services &
+                Trading L.L.C ("QScrap", "we", "us", or "our") collects, uses, shares, and protects your personal
+                information when you use our mobile applications and services.</p>
+        </div>
+
+        <h2>1. Introduction & Scope</h2>
+        <p>QScrap Services & Trading L.L.C / كيوسكراب للخدمات والتجارة ذ.م.م is a company registered in the State of
+            Qatar (CR: 155892) operating the QScrap Customer App and QScrap Driver App (collectively, "the Apps"). This
+            Privacy Policy applies to all users of our applications and services, including:</p>
+        <ul>
+            <li><strong>Customers:</strong> Users seeking automotive spare parts</li>
+            <li><strong>Garage Partners:</strong> Businesses providing spare parts through our marketplace</li>
+            <li><strong>Drivers:</strong> Delivery personnel using the QScrap Driver App</li>
+        </ul>
+        <p>By using our Apps or services, you consent to the collection, use, and disclosure of your information as
+            described in this Privacy Policy. This policy complies with Qatar's Law No. 13 of 2016 on Personal Data
+            Protection and Google Play's Developer Program Policies.</p>
 
         <h2>2. Information We Collect</h2>
-        <p>We may collect the following types of information:</p>
+
+        <h3>2.1 Personal Information You Provide</h3>
+        <p>When you register for and use our Apps, we collect:</p>
         <ul>
-            <li><strong>Personal Information:</strong> Name, phone number, and email address during registration</li>
-            <li><strong>Location Data:</strong> Your GPS location for delivery zone calculation and order delivery</li>
-            <li><strong>Device Information:</strong> Device type, operating system, and unique identifiers</li>
-            <li><strong>Usage Data:</strong> App interactions, features used, and browsing patterns</li>
-            <li><strong>Photos:</strong> Images you upload for part requests (VIN photos, part images)</li>
+            <li><strong>Account Information:</strong> Full name, phone number, email address</li>
+            <li><strong>Profile Information:</strong> Profile picture (optional), preferred language</li>
+            <li><strong>Vehicle Information:</strong> VIN (Vehicle Identification Number), make, model, year for parts
+                matching</li>
+            <li><strong>Payment Information:</strong> Payment method preferences (Cash on Delivery)</li>
+            <li><strong>Business Information (for Garages):</strong> Commercial Registration number, bank account
+                details (IBAN), business address</li>
+            <li><strong>Driver Information:</strong> Qatar ID, driver's license, vehicle registration, bank account for
+                payouts</li>
         </ul>
+
+        <h3>2.2 Information Collected Automatically</h3>
+        <p>When you use our Apps, we automatically collect:</p>
+        <ul>
+            <li><strong>Device Information:</strong> Device type, operating system version, unique device identifiers
+                (IMEI, Android ID), push notification tokens</li>
+            <li><strong>Location Data:</strong> GPS coordinates for delivery zone calculation, real-time tracking during
+                deliveries, and location-based garage matching</li>
+            <li><strong>Usage Data:</strong> App interactions, features used, browsing patterns, search queries, session
+                duration</li>
+            <li><strong>Log Data:</strong> IP address, access times, app crashes, system activity</li>
+            <li><strong>Photos and Media:</strong> Images you upload for part requests (VIN photos, part images, proof
+                of delivery)</li>
+        </ul>
+
+        <h3>2.3 Location Data</h3>
+        <div class="highlight-box">
+            <p><strong>Important:</strong> Our Apps require location access to function properly. We use location data
+                for:</p>
+            <ul>
+                <li>Calculating accurate delivery fees based on distance</li>
+                <li>Matching you with nearby garages</li>
+                <li>Real-time order tracking and delivery coordination</li>
+                <li>Driver navigation and route optimization</li>
+            </ul>
+            <p>You may disable location services in your device settings, but this will significantly impact the
+                functionality of our services including delivery fee calculation and order tracking.</p>
+        </div>
 
         <h2>3. How We Use Your Information</h2>
-        <p>We use collected information for:</p>
+        <p>We use the collected information for the following purposes:</p>
+
+        <h3>3.1 Service Provision</h3>
         <ul>
             <li>Processing and fulfilling spare part requests and orders</li>
+            <li>Facilitating bidding between customers and garages</li>
             <li>Calculating delivery fees based on your location</li>
             <li>Providing real-time order tracking and notifications</li>
-            <li>Improving our services and user experience</li>
-            <li>Communicating with you about your orders</li>
+            <li>Processing payments and payouts</li>
+            <li>Managing warranties, returns, and refunds</li>
         </ul>
 
-        <h2>4. Data Sharing</h2>
-        <p>We may share your information with:</p>
+        <h3>3.2 Communication</h3>
         <ul>
-            <li><strong>Garages:</strong> Your delivery address and contact info for order fulfillment</li>
-            <li><strong>Drivers:</strong> Your delivery location for order delivery</li>
-            <li><strong>Service Providers:</strong> Third parties who assist in app operations</li>
+            <li>Sending order confirmations, updates, and delivery notifications</li>
+            <li>Customer support and dispute resolution</li>
+            <li>Important service announcements and policy updates</li>
+            <li>Marketing communications (with your consent)</li>
         </ul>
-        <p>We do not sell your personal information to third parties.</p>
+
+        <h3>3.3 Improvement & Safety</h3>
+        <ul>
+            <li>Analyzing usage patterns to improve our services</li>
+            <li>Fraud detection and prevention</li>
+            <li>Ensuring platform safety and security</li>
+            <li>Compliance with legal obligations</li>
+        </ul>
+
+        <h2>4. Data Sharing & Disclosure</h2>
+        <p>We may share your information with:</p>
+
+        <h3>4.1 Service Partners</h3>
+        <ul>
+            <li><strong>Garages:</strong> Your name, phone number, and delivery address for order fulfillment</li>
+            <li><strong>Drivers:</strong> Your name, phone number, and delivery location for order delivery</li>
+            <li><strong>Payment Processors:</strong> Transaction details for payment processing</li>
+        </ul>
+
+        <h3>4.2 Third-Party Service Providers</h3>
+        <ul>
+            <li><strong>Cloud Infrastructure:</strong> AWS/Google Cloud for secure data storage</li>
+            <li><strong>Analytics:</strong> Google Analytics for usage analysis</li>
+            <li><strong>Maps & Location:</strong> Google Maps for location services</li>
+            <li><strong>Push Notifications:</strong> Firebase Cloud Messaging for notifications</li>
+        </ul>
+
+        <h3>4.3 Legal Requirements</h3>
+        <p>We may disclose your information when required by Qatar law, court orders, or government regulations,
+            including compliance with Qatar's Law No. 13 of 2016 on Personal Data Protection.</p>
+
+        <div class="highlight-box">
+            <p><strong>We do NOT sell your personal information to third parties for advertising or marketing
+                    purposes.</strong></p>
+        </div>
 
         <h2>5. Data Security</h2>
-        <p>We implement industry-standard security measures including encryption, secure servers, and access controls to
-            protect your data.</p>
-
-        <h2>6. Your Rights</h2>
-        <p>You have the right to:</p>
+        <p>We implement industry-standard security measures to protect your data:</p>
         <ul>
-            <li>Access and update your personal information</li>
-            <li>Request deletion of your account and data</li>
-            <li>Opt-out of promotional communications</li>
-            <li>Disable location services (may affect delivery fee calculation)</li>
+            <li><strong>Encryption:</strong> All data transmissions use SSL/TLS encryption (HTTPS)</li>
+            <li><strong>Secure Storage:</strong> Data is stored in encrypted databases with access controls</li>
+            <li><strong>Authentication:</strong> OTP-based verification for account access</li>
+            <li><strong>Access Control:</strong> Role-based access restrictions for employees</li>
+            <li><strong>Regular Audits:</strong> Security assessments and vulnerability testing</li>
+            <li><strong>Incident Response:</strong> Procedures for data breach notification within 72 hours</li>
+        </ul>
+        <p>While we strive to protect your data, no method of transmission over the Internet is 100% secure. We cannot
+            guarantee absolute security.</p>
+
+        <h2>6. Data Retention</h2>
+        <p>We retain your personal information for as long as necessary to:</p>
+        <ul>
+            <li>Provide our services and fulfill orders</li>
+            <li>Comply with Qatar's legal requirements (10-year retention for commercial records per Qatar Commercial
+                Law)</li>
+            <li>Resolve disputes and enforce agreements</li>
+            <li>Maintain audit trails for regulatory compliance</li>
+        </ul>
+        <p>When data is no longer needed, we securely delete or anonymize it.</p>
+
+        <h2>7. Your Rights</h2>
+        <p>Under Qatar's data protection laws and our policies, you have the right to:</p>
+        <ul>
+            <li><strong>Access:</strong> Request a copy of your personal data we hold</li>
+            <li><strong>Correction:</strong> Update or correct inaccurate information</li>
+            <li><strong>Deletion:</strong> Request deletion of your account and personal data (subject to legal
+                retention requirements)</li>
+            <li><strong>Portability:</strong> Request an export of your data in a common format</li>
+            <li><strong>Opt-out:</strong> Unsubscribe from marketing communications</li>
+            <li><strong>Withdraw Consent:</strong> Revoke permissions for optional data processing</li>
+        </ul>
+        <p>To exercise these rights, contact us at <a href="mailto:privacy@qscrap.qa">privacy@qscrap.qa</a>. We will
+            respond within 30 days.</p>
+
+        <h2>8. Account Deletion</h2>
+        <p>You may request account deletion through the app or by contacting us. Upon deletion:</p>
+        <ul>
+            <li>Your profile and personal data will be removed or anonymized</li>
+            <li>Order history may be retained in anonymized form for legal/audit purposes</li>
+            <li>Some data required by law (invoices, transaction records) will be retained per Qatar Commercial Law</li>
         </ul>
 
-        <h2>7. Children's Privacy</h2>
-        <p>Our app is not intended for users under 18 years of age. We do not knowingly collect data from children.</p>
+        <h2>9. Children's Privacy</h2>
+        <p>Our Apps are not intended for users under 18 years of age. We do not knowingly collect personal information
+            from children under 18. If you believe a child has provided us with personal information, please contact us
+            immediately, and we will delete such information.</p>
 
-        <h2>8. Changes to This Policy</h2>
-        <p>We may update this Privacy Policy periodically. We will notify you of significant changes through the app or
-            email.</p>
+        <h2>10. Third-Party Links</h2>
+        <p>Our Apps may contain links to third-party websites or services. We are not responsible for the privacy
+            practices of these third parties. We encourage you to read their privacy policies before providing any
+            personal information.</p>
 
-        <h2>9. Contact Us</h2>
-        <p>For questions about this Privacy Policy, contact us at:</p>
-        <p>Email: <a href="mailto:privacy@qscrap.qa">privacy@qscrap.qa</a></p>
-        <p>Address: Qatar</p>
+        <h2>11. International Data Transfers</h2>
+        <p>Your information may be transferred to and processed on servers located outside Qatar (e.g., cloud
+            infrastructure in the UAE, Europe, or USA). We ensure appropriate safeguards are in place to protect your
+            data in accordance with Qatar's Law No. 13 of 2016.</p>
+
+        <h2>12. Changes to This Policy</h2>
+        <p>We may update this Privacy Policy periodically. We will notify you of significant changes through:</p>
+        <ul>
+            <li>In-app notifications</li>
+            <li>Email to your registered email address</li>
+            <li>A prominent notice on our website</li>
+        </ul>
+        <p>Continued use of our Apps after changes constitutes acceptance of the updated policy.</p>
+
+        <h2>13. Contact Us</h2>
+        <div class="company-info">
+            <p><strong>QScrap Services & Trading L.L.C</strong></p>
+            <p>كيوسكراب للخدمات والتجارة ذ.م.م</p>
+            <p><strong>Commercial Registration:</strong> 155892</p>
+            <br>
+            <p><strong>Data Protection Officer:</strong> privacy@qscrap.qa</p>
+            <p><strong>General Inquiries:</strong> <a href="mailto:support@qscrap.qa">support@qscrap.qa</a></p>
+            <p><strong>Phone:</strong> +974 4455 4444</p>
+            <p><strong>Address:</strong> Industrial Area, Street 10, P.O. Box 32544, Doha, Qatar</p>
+            <p><strong>Website:</strong> <a href="https://www.qscrap.qa">www.qscrap.qa</a></p>
+        </div>
+
+        <h2>14. Governing Law</h2>
+        <p>This Privacy Policy is governed by the laws of the State of Qatar, including Law No. 13 of 2016 on Personal
+            Data Protection. Any disputes shall be subject to the exclusive jurisdiction of Qatar courts.</p>
+
+        <p style="margin-top:40px; font-size:0.9em; color:#666;">
+            © 2026 QScrap Services & Trading L.L.C. All rights reserved.<br>
+            This privacy policy complies with Google Play Developer Program Policies and Qatar's Personal Data
+            Protection Law.
+        </p>
     </div>
 </body>
 
