fix: Remove inline style that blocked modal visibility

--- a/public/support-dashboard.html
+++ b/public/support-dashboard.html
@@ -1280,7 +1280,7 @@
     </div>
 
     <!-- Order Details Modal for Support -->
-    <div class="modal-overlay" id="orderDetailsModal" style="display: none;">
+    <div class="modal-overlay" id="orderDetailsModal">
         <div class="modal-container" style="max-width: 900px; max-height: 90vh; overflow-y: auto;">
             <div class="modal-header" style="background: var(--vvip-gradient); color: white;">
                 <h2><i class="bi bi-box-seam"></i> Order Details</h2>
@@ -1302,7 +1302,7 @@
     <script src="js/shared/utils.js"></script>
     <script src="js/shared/toast.js"></script>
     <script src="js/shared/modal.js"></script>
-    <script src="js/support-dashboard.js?v=20260131f"></script>
+    <script src="js/support-dashboard.js?v=20260131g"></script>
 </body>
 
 </html>
