fix: Correct refund property names in Order Details modal (amount→refund_amount, status→refund_status, reason→refund_reason)

--- a/public/support-dashboard.html
+++ b/public/support-dashboard.html
@@ -1302,7 +1302,7 @@
     <script src="js/shared/utils.js"></script>
     <script src="js/shared/toast.js"></script>
     <script src="js/shared/modal.js"></script>
-    <script src="js/support-dashboard.js?v=20260131g"></script>
+    <script src="js/support-dashboard.js?v=20260131h"></script>
 </body>
 
 </html>
