--- a/public/finance-dashboard.html
+++ b/public/finance-dashboard.html
@@ -735,7 +735,7 @@
     </div>
 
     <!-- Send Payment Modal -->
-    <div class="modal-overlay" id="sendPaymentModal" style="display: none;">
+    <div class="modal-overlay" id="sendPaymentModal">
         <div class="modal-container" style="max-width: 450px;">
             <div class="modal-header" style="background: linear-gradient(135deg, #10b981, #059669); color: white;">
                 <h2><i class="bi bi-send-check"></i> Send Payment</h2>
@@ -792,7 +792,7 @@
     </div>
 
     <!-- Batch Payment Modal -->
-    <div class="modal-overlay" id="batchPaymentModal" style="display: none;">
+    <div class="modal-overlay" id="batchPaymentModal">
         <div class="modal-container" style="max-width: 550px;">
             <div class="modal-header" style="background: linear-gradient(135deg, #6366f1, #4f46e5); color: white;">
                 <h2><i class="bi bi-lightning-charge-fill"></i> Batch Payment</h2>
@@ -865,7 +865,7 @@
     </div>
 
     <!-- Refund Modal -->
-    <div class="modal-overlay" id="refundModal" style="display: none;">
+    <div class="modal-overlay" id="refundModal">
         <div class="modal-container" style="max-width: 500px;">
             <div class="modal-header" style="background: linear-gradient(135deg, #ef4444, #dc2626); color: white;">
                 <h2><i class="bi bi-arrow-return-left"></i> Create Refund</h2>
@@ -964,7 +964,7 @@
     </div>
 
     <!-- Resolve Dispute Modal -->
-    <div class="modal-overlay" id="resolveDisputeModal" style="display: none;">
+    <div class="modal-overlay" id="resolveDisputeModal">
         <div class="modal-container" style="max-width: 500px;">
             <div class="modal-header" style="background: linear-gradient(135deg, #f59e0b, #d97706); color: white;">
                 <h2><i class="bi bi-shield-check"></i> Resolve Payment Dispute</h2>
