--- a/public/operations-dashboard.html
+++ b/public/operations-dashboard.html
@@ -1215,7 +1215,7 @@
     <div class="toast-container" id="toastContainer"></div>
 
     <!-- Keyboard Shortcuts Modal -->
-    <div class="modal-overlay" id="keyboardShortcutsModal" style="display: none;">
+    <div class="modal-overlay" id="keyboardShortcutsModal">
         <div class="shortcuts-modal">
             <div class="shortcuts-header">
                 <h3><i class="bi bi-keyboard"></i> Keyboard Shortcuts</h3>
