--- a/public/operations-dashboard.html
+++ b/public/operations-dashboard.html
@@ -580,10 +580,7 @@
                     <div class="tab active" data-panel="deliveryPanelAll">
                         <i class="bi bi-grid"></i> All
                     </div>
-                    <div class="tab" data-panel="deliveryPanelCollection">
-                        <i class="bi bi-building"></i> Collection
-                        <span class="nav-badge" id="collectionBadge" style="display: none;">0</span>
-                    </div>
+                    <!-- Collection tab removed (2026-02-01) - duplicates Orders section functionality -->
                     <div class="tab" data-panel="deliveryPanelDelivery">
                         <i class="bi bi-box-arrow-up"></i> Delivery
                         <span class="nav-badge" id="deliveryBadge" style="display: none;">0</span>
