--- a/public/operations-dashboard.html
+++ b/public/operations-dashboard.html
@@ -530,9 +530,7 @@
             <section class="section" id="sectionDelivery">
                 <div class="page-header">
                     <h1 class="page-title">Logistics Management</h1>
-                    <button class="btn btn-primary" onclick="openAddDriverModal()">
-                        <i class="bi bi-plus-lg"></i> Add Driver
-                    </button>
+                    <!-- Add Driver moved to Admin Dashboard -->
                 </div>
 
                 <!-- Delivery Stats -->
