--- a/public/privacy.html
+++ b/public/privacy.html
@@ -222,6 +222,7 @@
         .summary-card p {
             font-size: 16px;
             line-height: 1.7;
+            color: var(--white);
             opacity: 0.95;
         }
 
