fix: footer text white instead of grey for better readability

--- a/public/privacy.html
+++ b/public/privacy.html
@@ -434,10 +434,14 @@
         /* Footer */
         .footer {
             background: var(--black);
-            color: var(--slate);
+            color: var(--white);
             text-align: center;
             padding: 32px 24px;
             font-size: 14px;
+        }
+
+        .footer p {
+            opacity: 0.9;
         }
 
         .footer a {
