fix: correct logo path to /assets/images/qscrap-logo.png across all pages

--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@
     <nav class="nav" id="mainNav">
         <div class="nav-container">
             <a href="/" class="nav-logo">
-                <img src="/QScrap-logo.png" alt="QScrap Logo">
+                <img src="/assets/images/qscrap-logo.png" alt="QScrap Logo">
                 <span class="nav-logo-text">QScrap</span>
             </a>
 
@@ -468,7 +468,8 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-brand">
-                    <img src="/QScrap-logo.png" alt="QScrap Logo" style="filter: brightness(0) invert(1);">
+                    <img src="/assets/images/qscrap-logo.png" alt="QScrap Logo"
+                        style="filter: brightness(0) invert(1);">
                     <p>Qatar's leading automotive parts marketplace. Connecting buyers with verified garages for quality
                         parts delivered to your door.</p>
                     <div class="footer-social">
