--- a/public/privacy.html
+++ b/public/privacy.html
@@ -483,7 +483,7 @@
     <nav class="nav">
         <div class="nav-container">
             <a href="/" class="nav-logo">
-                <img src="/QScrap-logo.png" alt="QScrap Logo">
+                <img src="/assets/images/qscrap-logo.png" alt="QScrap Logo">
                 <span class="nav-logo-text">QScrap</span>
             </a>
             <a href="/" class="nav-back">
