--- a/public/index.html
+++ b/public/index.html
@@ -80,7 +80,7 @@
             <div class="nav-links">
                 <a href="#how-it-works" class="nav-link">How It Works</a>
                 <a href="#marketplace" class="nav-link">Marketplace</a>
-                <a href="#partners" class="nav-link">For Businesses</a>
+                <a href="/partners.html" class="nav-link">For Businesses</a>
                 <a href="/privacy.html" class="nav-link">Privacy</a>
             </div>
 
