CRITICAL: fix misleading payout claims - align with 7-day warranty rule
LEGAL FIX - removed false advertising:
- Changed '24hrs Average Payout' stat to '7-Day Warranty Protected'
- Changed 'instant payouts' to 'guaranteed payouts'
- Changed 'same-day payouts' to 'guaranteed payouts'
- Changed tier payout features to '7-day payouts' (accurate per backend)

Backend rule (BRAIN Section 9.1): NO payouts within 7 days of delivery

--- a/public/partners.html
+++ b/public/partners.html
@@ -8,7 +8,7 @@
     <!-- SEO Meta Tags -->
     <title>Become a Partner Garage | QScrap Qatar - Grow Your Parts Business</title>
     <meta name="description"
-        content="Join Qatar's fastest-growing automotive parts marketplace. Reach thousands of customers, increase sales, and get same-day payouts. Apply to become a QScrap Partner Garage today.">
+        content="Join Qatar's fastest-growing automotive parts marketplace. Reach thousands of customers, increase sales, and get guaranteed payouts. Apply to become a QScrap Partner Garage today.">
     <meta name="keywords"
         content="garage partner Qatar, automotive marketplace, spare parts business, sell car parts Qatar, QScrap partner">
     <meta name="author" content="QScrap Services & Trading L.L.C">
@@ -18,7 +18,7 @@
     <meta property="og:url" content="https://www.qscrap.qa/partners">
     <meta property="og:title" content="Become a QScrap Partner Garage | Grow Your Business">
     <meta property="og:description"
-        content="Join Qatar's leading automotive parts marketplace. Verified garages, instant payouts, zero upfront costs.">
+        content="Join Qatar's leading automotive parts marketplace. Verified garages, guaranteed payouts, zero upfront costs.">
     <meta property="og:image" content="https://www.qscrap.qa/assets/og-partners.jpg">
 
     <!-- Favicon -->
@@ -893,7 +893,7 @@
             <h1>Grow Your <span>Parts Business</span> With Qatar's #1 Marketplace</h1>
             <p class="hero-subtitle">
                 Join 50+ verified garages already earning more through QScrap.
-                Zero upfront costs, instant payouts, and thousands of customers waiting for your parts.
+                Zero upfront costs, guaranteed payouts, and thousands of customers waiting for your parts.
             </p>
             <div class="hero-cta-group">
                 <a href="#apply" class="btn-primary">
@@ -926,8 +926,8 @@
                 <div class="stat-label">Partner Satisfaction</div>
             </div>
             <div class="stat-item">
-                <div class="stat-number">24hrs</div>
-                <div class="stat-label">Average Payout</div>
+                <div class="stat-number">7-Day</div>
+                <div class="stat-label">Warranty Protected</div>
             </div>
         </div>
     </section>
@@ -1037,7 +1037,7 @@
                         <li>Access to all customers</li>
                         <li>Standard dashboard</li>
                         <li>Email support</li>
-                        <li>7-day payout cycle</li>
+                        <li>Guaranteed 7-day payouts</li>
                     </ul>
                     <a href="#apply" class="tier-cta">Get Started Free</a>
                 </div>
@@ -1052,7 +1052,7 @@
                         <li>Priority listing in search</li>
                         <li>Advanced analytics</li>
                         <li>Priority phone support</li>
-                        <li>24-hour payouts</li>
+                        <li>Priority 7-day payouts</li>
                         <li>Promotional features</li>
                     </ul>
                     <a href="#apply" class="tier-cta">Apply for Gold</a>
@@ -1067,7 +1067,7 @@
                         <li>Featured placement</li>
                         <li>Dedicated account manager</li>
                         <li>Custom analytics reports</li>
-                        <li>Same-day payouts</li>
+                        <li>Express 7-day payouts</li>
                         <li>Marketing co-investment</li>
                     </ul>
                     <a href="#apply" class="tier-cta">Contact Sales</a>
