fix: remove remaining misleading payout claims
- Changed 'Instant Payouts' benefit to 'Guaranteed Payouts'
- Changed '24 hours' description to '7-day warranty period'
- Changed Step 4 'paid instantly' to 'receive guaranteed payouts'

All payout claims now accurate per backend 7-day warranty rule

--- a/public/partners.html
+++ b/public/partners.html
@@ -945,8 +945,9 @@
             <div class="benefits-grid">
                 <div class="benefit-card">
                     <div class="benefit-icon">💰</div>
-                    <h3 class="benefit-title">Instant Payouts</h3>
-                    <p class="benefit-desc">Get paid within 24 hours of delivery confirmation. No waiting, no hassle.
+                    <h3 class="benefit-title">Guaranteed Payouts</h3>
+                    <p class="benefit-desc">Get paid reliably after the 7-day warranty period. Secure, transparent
+                        process.
                         Direct bank transfer to your account.</p>
                 </div>
                 <div class="benefit-card">
@@ -1012,7 +1013,7 @@
                 <div class="step-card">
                     <div class="step-number">4</div>
                     <h3 class="step-title">Earn & Grow</h3>
-                    <p class="step-desc">Fulfill orders, get paid instantly, and grow your customer base.</p>
+                    <p class="step-desc">Fulfill orders, receive guaranteed payouts, and grow your customer base.</p>
                 </div>
             </div>
         </div>
