feat: add mobile contact numbers to About page
Added: +974 5026 7974 and +974 5590 6912

--- a/public/about.html
+++ b/public/about.html
@@ -797,6 +797,12 @@
                         <a href="mailto:support@qscrap.qa"
                             style="color: var(--qatar-maroon); text-decoration: none;">support@qscrap.qa</a>
                     </p>
+                    <p><strong>Mobile:</strong><br>
+                        <a href="tel:+97450267974" style="color: var(--qatar-maroon); text-decoration: none;">+974 5026
+                            7974</a><br>
+                        <a href="tel:+97455906912" style="color: var(--qatar-maroon); text-decoration: none;">+974 5590
+                            6912</a>
+                    </p>
                     <p><strong>Landline:</strong><br>
                         +974 4455 4444</p>
                     <p><strong>Business Hours:</strong><br>
