feat: add About link to homepage navigation
Replaced Privacy link with About for better user flow

--- a/public/index.html
+++ b/public/index.html
@@ -81,7 +81,7 @@
                 <a href="#how-it-works" class="nav-link">How It Works</a>
                 <a href="#marketplace" class="nav-link">Marketplace</a>
                 <a href="/partners.html" class="nav-link">For Businesses</a>
-                <a href="/privacy.html" class="nav-link">Privacy</a>
+                <a href="/about.html" class="nav-link">About</a>
             </div>
 
             <div class="nav-actions">
